# CLI-Assistant

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  MANIFEST.in  MIGRATION.md  README.md  cleanup.py  fibinocci.js  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  sort_example.py  test_model.py
.github/workflows/: ci.yml  lint.yml  publish.yml
backend/: README.md  __init__.py  main.py
backend/api/: __init__.py  api_testing.py  code.py  docs.py  git.py  terminal.py  text.py
backend/services/: __init__.py  model_manager.py
cli/: README.md  main.py
cli/ai_agent_models/: README.md  __init__.py  base_model.py  model_factory.py  ollama_deepseek_r1_7b.py
cli/commands/: __init__.py  api.py  code.py  docs.py  git.py  terminal.py
cli/utils/: README.md  __init__.py  api.py  config.py  formatting.py  ollama.py
docs/: development.md  ollama.md  pypi_distribution.md
scripts/: check_installation.py  clean_install.bat  clean_install.sh  fix_common_lint_errors.py  fix_mypy_module_issue.py  format_code.sh  install_completion.sh  publish.py  setup_hooks.bat  setup_hooks.sh  update_requirements.py  verify_install.bat  verify_install.sh
shared/: __init__.py
tests/: README.md  __init__.py  conftest.py  run_tests.py  test_api.py  test_cli.py  test_cli_utils.py  test_models.py
