[metadata]
name = ai-cli-assistant
description = AI-Powered CLI Assistant for Developers
author = Developer
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    cli
    backend
    shared
python_requires = >=3.8
package_dir =
    =.
zip_safe = no

[options.entry_points]
console_scripts =
    aidev = cli.main:app 